# jobtrackr

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml
JobTrackrApi/: .gitignore  AGENTS.md  pom.xml
cv-generation-service/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.lock.txt
cv-generation-service/src/cv_generation/: __init__.py  auth.py  config.py  main.py
cv-generation-service/src/cv_generation/api/: generate.py  health.py
cv-generation-service/src/cv_generation/extraction/: __init__.py  extract.py
cv-generation-service/src/cv_generation/graph/: __init__.py  nodes.py  state.py  validation.py  workflow.py
cv-generation-service/src/cv_generation/models/: __init__.py  candidate_evidence.py  canonical_cv.py  errors.py  specification.py
cv-generation-service/src/cv_generation/providers/: __init__.py  base.py  fake.py  gemini.py
cv-generation-service/src/cv_generation/render/: __init__.py  docx_renderer.py  markdown.py  pdf_renderer.py  verify.py
cv-generation-service/tests/: conftest.py  test_extraction.py  test_gemini_provider.py  test_generate_contract.py  test_graph_fake.py  test_health.py  test_renderers.py  test_review_corrections.py
cv-generation-service/tests/fixtures/: sample_base_cv.md
docs/: README.md  development.md  running-locally.md
jobtrackr-web/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: cloud-tunnel-down.sh  cloud-tunnel-up.sh  db-dump-local-pg.sh  db-reset.sh  db-restore-dump.sh  db-seed-dev.sh  dev-api.sh  dev-cv-gen.sh  dev-up.sh  dev-web.sh
(+326 files in other folders)
