[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-generation-service"
version = "0.1.0"
description = "Stateless FastAPI service for ATS-safe CV generation (JobTrackr)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "JobTrackr" }]
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "python-multipart>=0.0.12,<1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "langgraph>=0.2.50,<1.0",
    "langchain-core>=0.3.0,<1.0",
    "python-docx>=1.1.2,<2.0",
    "weasyprint>=63.0,<65.0",
    "pypdf>=5.1.0,<6.0",
    "pdfplumber>=0.11.0,<1.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
gemini = [
    "google-genai>=1.0.0,<2.0",
]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "httpx>=0.27.0,<1.0",
]

[project.scripts]
cv-generation = "cv_generation.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_generation"]

[tool.hatch.build.targets.sdist]
include = ["src/cv_generation", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
